--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,13 @@
 			<artifactId>spring-context</artifactId>
 		</dependency>
 
+
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>1.4.196</version>
+			<scope>test</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
